<resources>
    <string name="app_name">海賊爭霸Online</string>
    <string name="taiwan_trilogy_link">《臺灣三部曲》電影群眾集資網站</string>
    <string name="igotallday_movie_link">【大業配時代】流量就是一切！神秘廠商來襲！業配成功真相！feat.魏德聖</string>
    <string name="get_line_infantry">領取你的 S級火槍兵</string>
    <string name="exit">離開海賊爭霸</string>
    <string name="line_infantry_already_get_count">已經有 %1$s 位玩家領取 S級火槍兵</string>
    <string name="your_line_infantry_count">NO. %1$s</string>
    <string name="line_infantry">火槍兵</string>
    <string name="capital_letters_s">S</string>
</resources>