<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sivAmTitle"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/magic_8dp"
        android:src="@color/hexColor092_Gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/rounded8dp_TopRight80dp_BottomLift80dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/emoji_people_svg"
        app:layout_constraintBottom_toBottomOf="@+id/sivAmTitle"
        app:layout_constraintEnd_toEndOf="@+id/mtvAmTitle"
        app:layout_constraintStart_toStartOf="@+id/mtvAmTitle"
        app:layout_constraintTop_toBottomOf="@+id/mtvAmTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvAmTitle"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:gravity="center"
        android:lines="1"
        android:padding="@dimen/magic_8dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/sivAmTitle"
        app:layout_constraintEnd_toEndOf="@+id/sivAmTitle"
        app:layout_constraintStart_toStartOf="@+id/sivAmTitle"
        app:layout_constraintTop_toTopOf="@+id/sivAmTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbAmGetLineInfantry"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/magic_8dp"
        android:layout_marginEnd="@dimen/magic_8dp"
        android:lines="1"
        android:text="@string/get_line_infantry"
        android:textAllCaps="false"
        app:autoSizeTextType="uniform"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/mbTaiwanTrilogy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sivAmTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvAmGetLineInfantryCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/magic_8dp"
        android:textColor="@color/hexColor092_Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbAmGetLineInfantry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbTaiwanTrilogy"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/magic_8dp"
        android:layout_marginEnd="@dimen/magic_8dp"
        android:lines="1"
        android:text="@string/taiwan_trilogy_link"
        android:textAllCaps="false"
        app:autoSizeTextType="uniform"
        app:icon="@drawable/taiwantrilogy"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/mbAmMovieLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbAmMovieLink"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/magic_8dp"
        android:layout_marginEnd="@dimen/magic_8dp"
        android:text="@string/igotallday_movie_link"
        app:autoSizeTextType="uniform"
        app:icon="@drawable/igotallday"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/mbAmExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbTaiwanTrilogy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbAmExit"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/magic_8dp"
        android:layout_marginEnd="@dimen/magic_8dp"
        android:text="@string/exit"
        app:autoSizeTextType="uniform"
        app:icon="@drawable/exit_to_app_svg"
        app:iconSize="48dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbAmMovieLink" />
</androidx.constraintlayout.widget.ConstraintLayout>